# MaskCracker

./: .gitignore  LICENSE  README.md  README_en.md  decrypt.py  main.py  pyproject.toml  run_hashcat.bat  win.py
src/: __init__.py  generate_dic.py  hack_chrome_password.py  hack_metamask.py  hashcat.py  main.py  utils.py
tests/: test_hack.py
