[tool.poetry]
name = "hackChromePassword"
version = "0.1.0"
description = ""
authors = ["Jiahao Luo <luoshitou9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pycryptodome = "^3.21.0"
pywin32 = { version = "308", platform = "win32" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
